# riverhog

./: .dockerignore  .env.compose.example  .env.example  .gitignore  Dockerfile.app  Dockerfile.seaweedfs  Dockerfile.test  Makefile  README.md  compose.yml  docker-compose.test.yml  docker-compose.yml  planner.patch  pyproject.toml  requirements-dev.txt  requirements-runtime.txt  requirements-test.txt  test
.github/workflows/: release-on-tag.yml  test.yml
api/: Dockerfile  entrypoint.sh  requirements.txt
api/app/: auth.py  config.py  crypto.py  db.py  hooks.py  iso.py  main.py  models.py  planner.py  progress.py  schemas.py  storage.py  transfers.py
app/: Dockerfile  app.py  requirements.txt
contracts/disc/: collection-hash-manifest.schema.json  disc-manifest.schema.json  file-sidecar.schema.json  root-layout.json
contracts/openapi/: arc.v1.yaml
contracts/operator/: action-needed-notification.schema.json  copy.py  format.py  statecharts.schema.json  statecharts.yaml  status-notification.schema.json
docs/: README.md
docs/adr/: 0001-treat-hot-availability-as-derived-not-the-source-of-truth.md  0001-use-python-fastapi-and-typer.md  0002-make-the-api-and-cli-contract-explicit.md  0002-use-one-canonical-target-syntax.md  0003-use-explicit-collection-ids.md  0004-use-s3-compatible-hot-storage.md  0005-use-tusd-for-resumable-uploads.md  0006-use-a-canonical-disc-layout-with-generic-object-names.md  0006-use-sqlite-as-authoritative-catalog.md  0007-archive-collections-before-acceptance.md  0007-ship-self-describing-recovery-metadata-on-every-disc.md  0008-derive-canonical-collection-ids-and-keep-search-minimal.md  0008-use-privacy-safe-glacier-archive-keys.md  0009-separate-provisional-candidates-from-finalized-images.md  0009-use-timestamp-volume-ids-and-separate-copy-identity-from-location.md  0010-make-fetch-manifests-pin-scoped-selector-recovery-contracts.md  0010-require-explicit-image-finalization.md  0011-track-physical-copies-by-generated-identity.md  0011-use-tus-compatible-resumable-upload-resources-for-fetches.md  0012-split-provisional-candidates-from-finalized-images.md  0012-use-pins-and-fetch-manifests-for-hot-residency.md  0013-upload-recovery-by-logical-file.md  0014-require-durable-authoritative-state-across-service-restarts.md  0014-use-approved-recovery-sessions.md  0015-expose-webdav-as-read-only-browsing.md  0016-use-compose-as-the-prod-backed-test-surface.md  0016-use-staging-filesystem-as-object-store-for-file-content.md  0017-file-introspection-endpoints.md  0017-use-gherkin-as-the-acceptance-source.md  0018-file-storage.md  0018-use-locked-test-and-runtime-dependencies.md  0019-keep-real-device-and-live-aws-checks-opt-in.md  0019-use-explicit-collection-upload-sessions.md  0020-use-environment-driven-runtime-configuration.md  0020-use-s3-compatible-committed-storage-with-tusd-staging-and-read-only-webdav.md  (+30 more)
garage/: garage.toml
garage-init/: Dockerfile  init-garage.sh
scripts/: _compose_env.sh  fsm_to_mermaid.py  prod.sh  prod_profile.sh  run-tests-in-dind.sh  stop_prod.sh  stop_spec.sh
tests/: FEATURES.md  conftest.py  helpers.py  mock_data.py  test_api_container_image.py  test_api_discovery.py  test_archive_lifecycle.py  test_auth_and_uploads.py  test_compose_config.py  test_iso_and_migration.py  test_stack.py  test_ui_playwright.py  test_ui_smoke.py  test_value_features.py  timing_profile.py
ui/: Dockerfile  __init__.py  requirements.txt
(+175 files in other folders)
