[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[project]
name = "arc-mvp-skeleton"
version = "0.1.0"
description = "MVP skeleton for the arc archival API and CLIs"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [{ name = "OpenAI" }]
dependencies = [
  "fastapi>=0.111,<1.0",
  "pydantic>=2.7,<3.0",
  "httpx>=0.27,<1.0",
  "typer>=0.12,<1.0",
  "uvicorn>=0.30,<1.0",
  "PyYAML>=6.0,<7.0",
  "boto3>=1.35,<2.0",
  "opentimestamps-client>=0.7,<1.0",
]


[project.optional-dependencies]
dev = [
  "pytest>=8.2,<9.0",
  "pytest-bdd>=8.1,<9.0",
  "pytest-cov>=5.0,<6.0",
  "jsonschema>=4.25,<5.0",
  "ruff>=0.5,<1.0",
  "mypy>=1.10,<2.0",
  "boto3-stubs[pricing,s3]>=1.35,<2.0",
  "scipy-stubs>=1.13,<2.0",
  "types-PyYAML>=6.0,<7.0",
]

planner = ["numpy>=2.0,<3.0", "scipy>=1.13,<2.0"]

db = ["sqlalchemy>=2.0,<3.0"]

[project.scripts]
arc-api = "arc_api.app:main"
arc = "arc_cli.main:main"
arc-disc = "arc_disc.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_api", "src/arc_cli", "src/arc_core", "src/arc_disc"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
markers = [
  "acceptance: executable contract scenarios loaded from Gherkin features",
  "api: API-focused contract coverage",
  "cli: CLI-focused contract coverage",
  "integration: non-contract regression coverage",
  "mvp: MVP contract coverage",
  "ci_opt_in: scenario or test is excluded from default CI and runs only when explicitly selected",
  "requires_optical_disc_drive: requires access to an optical disc drive",
  "requires_human_operator: requires an operator to provide or handle physical media",
  "requires_aws_s3: requires live AWS S3 access",
  "requires_aws_billing: requires live AWS Billing and Cost Explorer access",
  "requires_controlled_glacier_billing: requires fixture-controlled Glacier billing metadata",
  "requires_controlled_glacier_failure: requires fixture-controlled Glacier archive failure",
  "requires_glacier_restore: requires live S3 Glacier restore behavior",
  "requires_opentimestamps: requires the OpenTimestamps CLI and external anchoring access",
  "requires_webhook_capture: requires harness-controlled webhook capture or failure behavior",
  "todo: scenario is specified but not automated yet",
  "contract_gap: scenario is automated, but prod is not implemented to the contract yet",
  "issue_186: tracks issue #186 for opt-in prod testing conventions",
  "issue_187: tracks issue #187 for removing fake terminology from acceptance optical scenarios",
  "issue_206: tracks issue #206 for backing accepted operator UX contracts in harnesses and scaffold",
  "issue_208: tracks issue #208 for no-arg arc-disc physical/recovery backlog clearing",
  "issue_209: tracks issue #209 for no-arg arc operator home and non-physical workflows",
  "issue_210: tracks issue #210 for action-needed webhook payloads",
  "issue_211: tracks issue #211 for replacing remaining normal CLI copy",
  "issue_264: tracks issue #264 for applying operator-facing recovery terminology",
]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["arc_api", "arc_cli", "arc_core", "arc_disc"]
